# Cloud-Nexus

./: .env.example  .gitignore  LICENSE  README.md  build_native.bat  ffigen.yaml  pubspec.yaml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/adapters/: cloud_adapter.dart  google_drive_adapter.dart  onedrive_adapter.dart
lib/models/: cancellation_token.dart  cloud_account.dart  cloud_account.g.dart  cloud_node.dart  cloud_node.g.dart  encrypted_file_mapping.dart  notification_type.dart  paginated_result.dart  queued_task.dart  search_index.dart  search_index.g.dart  storage_quota.dart  tab_data.dart  virtual_raid_upload_strategy.dart
lib/providers/: file_system_provider.dart  selection_provider.dart  tabs_provider.dart
lib/services/: encrypted_file_format.dart  encryption_name_service.dart  folder_upload_service.dart  google_auth_manager.dart  hive_storage_service.dart  notification_service.dart  onedrive_auth_manager.dart  rust_file_operations_service.dart  rust_folder_scanner.dart  rust_search_service.dart  search_service.dart  security_service.dart  streaming_encryption_service.dart  task_service.dart  (+1 more)
linux/: CMakeLists.txt
native/: Cargo.toml
native/include/: cloud_nexus_encryption.h
native/src/: copy.rs  download.rs  encryption.rs  file_io.rs  lib.rs  scan.rs  unified_copy.rs  upload.rs
native/src/search/: batch.rs  bridge.rs  fuzzy.rs  history.rs  incremental.rs  index.rs  mod.rs  path.rs  suggestions.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+44 files in other folders)
