[package]
name = "cloud_nexus_encryption"
version = "0.1.0"
edition = "2021"

[lib]
name = "cloud_nexus_encryption"
crate-type = ["cdylib"]

[dependencies]
# AES-GCM encryption
aes-gcm = "0.10"
# SHA-256 for key derivation
sha2 = "0.10"
# PBKDF2 for password-based key derivation
pbkdf2 = { version = "0.12", features = ["hmac"] }
# HMAC for PBKDF2
hmac = "0.12"
# Random number generation
rand = "0.8"
# Zeroize for secure memory handling
zeroize = "1.7"
# libc for FFI
libc = "0.2"
# Serialization for folder scan results
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime for parallel folder scanning
tokio = { version = "1.35", features = ["fs", "rt-multi-thread", "macros"] }

# Search module dependencies (Phase 1)
# Fuzzy string matching
strsim = "0.11"
# Unicode text segmentation for tokenization
unicode-segmentation = "1.11"

# Phase 2 dependencies
# Parallel processing for batch indexing
crossbeam = "0.8"
# Timestamp for search history
chrono = { version = "0.4", features = ["std"] }